enabled ninja and gladiator + changes on ninja